--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-946.6KB/s(Youtube:不良林), server: 134.195.196.231, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇳🇱 荷兰-185.1KB/s(Youtube:不良林), server: 213.183.51.171, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 波兰-199.3KB/s(Youtube:不良林), server: 217.30.10.65, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 波兰-237.9KB/s(Youtube:不良林), server: 217.30.10.65, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 134.195.196.231, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.253, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: 185.167.116.253, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇦🇺 澳大利亚-751.6KB/s(Youtube:不良林), server: 185.167.116.253, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇬🇧 英国-406.9KB/s(Youtube:不良林), server: 152.89.210.84, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 乌克兰-455.7KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 波兰-185.9KB/s(Youtube:不良林), server: 217.30.10.65, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇦🇺 澳大利亚-165.6KB/s(Youtube:不良林), server: 185.167.117.171, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林), server: 185.167.116.253, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇨🇦 加拿大-925.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-782.1KB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-390.4KB/s(Youtube:不良林), server: 169.197.142.39, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-802.6KB/s(Youtube:不良林), server: 169.197.142.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-401.0KB/s(Youtube:不良林), server: 169.197.142.39, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-946.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.1KB/s(Youtube:不良林)
-      - 波兰-199.3KB/s(Youtube:不良林)
-      - 波兰-237.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-751.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-406.9KB/s(Youtube:不良林)
-      - 乌克兰-455.7KB/s(Youtube:不良林)
+      - 波兰-185.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-165.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-925.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-401.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-946.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.1KB/s(Youtube:不良林)
-      - 波兰-199.3KB/s(Youtube:不良林)
-      - 波兰-237.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-751.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-406.9KB/s(Youtube:不良林)
-      - 乌克兰-455.7KB/s(Youtube:不良林)
+      - 波兰-185.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-165.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-925.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-401.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-946.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.1KB/s(Youtube:不良林)
-      - 波兰-199.3KB/s(Youtube:不良林)
-      - 波兰-237.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-751.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-406.9KB/s(Youtube:不良林)
-      - 乌克兰-455.7KB/s(Youtube:不良林)
+      - 波兰-185.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-165.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-925.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-401.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-946.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.1KB/s(Youtube:不良林)
-      - 波兰-199.3KB/s(Youtube:不良林)
-      - 波兰-237.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-751.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-406.9KB/s(Youtube:不良林)
-      - 乌克兰-455.7KB/s(Youtube:不良林)
+      - 波兰-185.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-165.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-925.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-401.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-946.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.1KB/s(Youtube:不良林)
-      - 波兰-199.3KB/s(Youtube:不良林)
-      - 波兰-237.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-751.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-406.9KB/s(Youtube:不良林)
-      - 乌克兰-455.7KB/s(Youtube:不良林)
+      - 波兰-185.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-165.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-925.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-401.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-946.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.1KB/s(Youtube:不良林)
-      - 波兰-199.3KB/s(Youtube:不良林)
-      - 波兰-237.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-751.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-406.9KB/s(Youtube:不良林)
-      - 乌克兰-455.7KB/s(Youtube:不良林)
+      - 波兰-185.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-165.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-925.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-401.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-946.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.1KB/s(Youtube:不良林)
-      - 波兰-199.3KB/s(Youtube:不良林)
-      - 波兰-237.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-751.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-406.9KB/s(Youtube:不良林)
-      - 乌克兰-455.7KB/s(Youtube:不良林)
+      - 波兰-185.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-165.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-925.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-401.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
