--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-858.8KB/s(Youtube:不良林), server: 152.89.210.84, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇦🇺 澳大利亚-392.6KB/s(Youtube:不良林), server: 185.167.116.253, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇬🇧 英国-217.6KB/s(Youtube:不良林), server: 152.89.210.105, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇺🇸 美国-486.8KB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇦🇺 澳大利亚-1020.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇦🇺 澳大利亚-330.9KB/s(Youtube:不良林), server: 185.167.116.253, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇦🇺 澳大利亚-499.2KB/s(Youtube:不良林), server: 185.167.116.253, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林), server: 185.167.116.253, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇺🇸 美国-553.9KB/s(Youtube:不良林), server: 169.197.142.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇦🇺 澳大利亚-1009.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
   - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.253, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林), server: 185.167.116.253, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-858.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-217.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1020.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-330.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1009.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-858.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-217.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1020.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-330.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1009.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-858.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-217.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1020.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-330.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1009.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-858.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-217.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1020.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-330.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1009.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-858.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-217.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1020.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-330.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1009.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-858.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-217.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1020.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-330.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1009.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-858.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-217.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1020.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-330.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1009.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
